unpackaged/main/default/objects/OrderApi__Order_Summary__c/OrderApi__Order_Summary__c.object-meta.xml
<CustomObject>
    <description>This object holds the information related to order summaries generated.</description>
    <label>Order Summary</label>
    <nameField>
        <displayFormat>{00000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Order Summaries</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>