unpackaged/main/default/objects/OrderApi__Order_Summary__c/fields/OrderApi__Account__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Link to the customer&#39;s account record. Auto-populates with the related contact&#39;s parent account if not defined prior to entry.</description>
    <inlineHelpText>Link to the customer&#39;s account record. Auto-populates with the related contact&#39;s parent account if not defined prior to entry.</inlineHelpText>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Order Summaries</relationshipLabel>
    <relationshipName>Order_Summaries</relationshipName>
    <type>Lookup</type>
</CustomField>