unpackaged/main/default/objects/OrderApi__Order_Summary__c/fields/OrderApi__Address_To__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Address_To__c</fullName>
    <description>Prepopulated with the Contact&#39;s or Account&#39;s Mailing/Billing Address.</description>
    <inlineHelpText>Prepopulated with the Contact&#39;s or Account&#39;s Mailing/Billing Address.</inlineHelpText>
    <label>Address To</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>