unpackaged/main/default/objects/OrderApi__Order_Summary__c/fields/OrderApi__Contact__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Link to the customer&#39;s contact record. Auto-populates with the related account&#39;s primary contact if not defined prior to entry.</description>
    <inlineHelpText>Link to the customer&#39;s contact record. Auto-populates with the related account&#39;s primary contact if not defined prior to entry.</inlineHelpText>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Order Summaries</relationshipLabel>
    <relationshipName>Order_Summaries</relationshipName>
    <type>Lookup</type>
</CustomField>