unpackaged/main/default/objects/OrderApi__Order_Summary__c/fields/OrderApi__Date__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Date__c</fullName>
    <description>This field defines the date the order summary was run.</description>
    <inlineHelpText>This field defines the date the order summary was run.</inlineHelpText>
    <label>Date</label>
    <type>Date</type>
</CustomField>