unpackaged/main/default/objects/OrderApi__Order_Summary__c/fields/OrderApi__Filter_Criteria__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Filter_Criteria__c</fullName>
    <description>This field defines the filter used to create the order summary.</description>
    <inlineHelpText>This field defines the filter used to create the order summary.</inlineHelpText>
    <label>Filter Criteria</label>
    <length>100000</length>
    <type>LongTextArea</type>
</CustomField>