unpackaged/main/default/objects/OrderApi__Order_Summary__c/fields/OrderApi__Memo__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Memo__c</fullName>
    <description>This field is displayed on the order summary document.</description>
    <inlineHelpText>This field is displayed on the order summary document.</inlineHelpText>
    <label>Memo</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>