unpackaged/main/default/objects/OrderApi__Order_Summary__c/fields/OrderApi__Order_Summary_URL__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Order_Summary_URL__c</fullName>
    <description>This field define the URL that shows the order summary.</description>
    <inlineHelpText>This field define the URL that shows the order summary.</inlineHelpText>
    <label>Order Summary URL</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>