unpackaged/main/default/objects/OrderApi__Order_Summary__c/fields/OrderApi__PDF_URL__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__PDF_URL__c</fullName>
    <description>This field define the URL that shows the PDF version of the statement.</description>
    <inlineHelpText>This field define the URL that shows the PDF version of the statement.</inlineHelpText>
    <label>PDF URL</label>
    <type>Url</type>
</CustomField>