unpackaged/main/default/objects/OrderApi__Order_Summary__c/fields/OrderApi__Show_Outstanding_Credits__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Show_Outstanding_Credits__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field allows staff users to show the outstanding credits a customer has with the organization.</description>
    <inlineHelpText>This field allows staff users to show the outstanding credits a customer has with the organization.</inlineHelpText>
    <label>Show Outstanding Credits</label>
    <type>Checkbox</type>
</CustomField>